update dasdboard admin, logic lại phần bidding, update lại UI